# harness-factory

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  checks_catalog.yaml  init.sh  mcp_catalog.yaml  pyproject.toml  requirements.txt  survey.en.yaml  survey.ko.yaml
.agents/: agent.yaml
.claude/: settings.json
.claude/skills/development/: SKILL.md
.claude/skills/doc-writing/: SKILL.md
.claude/skills/github-workflow/: SKILL.md
.docs/: index.md
.docs/design/: architecture.md
.docs/plans/: tech-debt.md
.docs/specs/: api_specs.md
.github/workflows/: ci.yml  deploy.yml
.scripts/: guard-bash.sh  post-commit.sh  pre-commit.sh  verify.sh
evals/: README.md  __init__.py  harness.py  run.py
evals/tasks/fix-failing-test/: task.yaml
evals/tasks/fix-lint-error/: task.yaml
evals/tasks/fix-lint-error/project/: greeter.py  test_greeter.py
src/harness_maker/: __init__.py  app.py  engine.py
src/harness_maker/static/: index.html
template/: AGENT.md
template/.docs/design/: architecture.md
template/.scripts/: check-boundaries.sh  verify.sh
template/en/: AGENT.md  PLAN.md
template/en/.agents/: agent.yaml
template/en/.docs/: index.md
template/en/.docs/design/: architecture.md  core-beliefs.md
template/en/.docs/plans/: tech-debt.md
template/en/.docs/references/: README.md
template/en/.docs/specs/: api_specs.md
template/en/.scripts/: check-boundaries.sh  guard-bash.sh  pre-commit.sh  trace.sh  verify.sh
template/en/.skills/development/: SKILL.md
template/en/.skills/doc-writing/: SKILL.md
template/ko/: AGENT.md
template/ko/.agents/: agent.yaml
template/ko/.scripts/: guard-bash.sh  pre-commit.sh  trace.sh
tests/: sample_answers.json  test_engine.py  test_eval.py
(+10 files in other folders)
