[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-factory"
version = "0.5.0"
description = "설문 몇 개로 Claude Code / Codex / Cursor용 에이전트 하네스를 만들어 zip으로 받는다."
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0", "fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.8", "pre-commit>=3.7"]

[project.scripts]
harness-factory = "harness_maker.app:serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harness_maker = ["static/*", "static/vendor/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/harness_maker/static/vendor"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear, C4: comprehensions
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]  # line length is handled by the formatter
